# luma

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  RULES.md  install.ps1  install.sh
.github/workflows/: release.yml
docs/handbook/: harness-improvement.md
docs/rfcs/: 0000-template.md  0001-evidence-backed-handoff.md  0002-provider-architecture.md  0003-paste-image-ux.md  0004-capability-aware-read.md  0005-kiro-provider.md  0006-prompt-tool-redesign.md  0007-instruction-injection-evidence-hierarchy.md  0008-session-audit-self-improvement-loop.md  0009-auth-routing-runtime-rearchitecture.md  0010-device-flow-and-interactive-auth-lanes.md  0011-image-attachment-routing.md  0012-agent-loop-architecture.md  0013-web-search-priority-chain.md  0014-daemon-architecture.md  0015-mcp-integration.md  0016-mcp-remote-auth-stack.md  README.md  evidence-backed-handoff.md
src/: cli_login.rs  event.rs  event_bus.rs  main.rs  util.rs
src/acp/: bridge.rs  mod.rs  transport.rs  types.rs
src/auth/: client.rs  domain.rs  error.rs  mod.rs  repo.rs  selection.rs  service.rs
src/authd/: manager.rs  mod.rs  protocol.rs
src/config/: auth.rs  models.catalog.json  models.rs  prefs.rs  prompt.rs  skills.rs
src/core/: agent.rs  audit.rs  context_plan.rs  evidence.rs  improve.rs  mod.rs  provider.rs  provider_state.rs  registry.rs  session.rs  tool.rs  types.rs
src/mcp/: auth.rs  bridge.rs  cli.rs  config.rs  manager.rs  mod.rs  oauth.rs
src/provider/: binding.rs  claude.rs  codex.rs  gateway.rs  json_stream.rs  mod.rs  openai.rs  retry.rs  runtime.rs  sse.rs  stream_io.rs
(+95 files in other folders)
